# Agentdemo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: agent_loop.md  architecture.md  extension_points.md  skills.md  smoke_tests.md
examples/: run_agent.py  run_architecture_demo.py
notes/: baseline_reasoning.md  report_structure.md  reproducible_workflows.md  tool_use_in_agents.md
skills/context_synthesis/: SKILL.md  manifest.json
skills/memory_update/: SKILL.md  manifest.json
skills/report_writing/: SKILL.md  manifest.json
skills/tool_execution/: SKILL.md  manifest.json
src/scientific_agent_from_scratch/: __init__.py  agents.py  context_router.py  handoff.py  kernel.py  memory.py  policy.py  rag.py  skills.py  state.py  task_graph.py  tools.py  trace.py  verifier.py
tests/: test_architecture_demo.py  test_kernel_boot.py  test_memory_roundtrip.py  test_policy.py  test_rag_router.py  test_skill_activation.py  test_tool_call.py
