[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scientific-agent-from-scratch"
version = "0.1.0"
description = "A from-scratch agent framework with task graphs, retrieval, memory, typed tools, skills, handoffs, tracing, verification, and pluggable policies."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
